<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registrasi.RegisterActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/title_registrasi"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.jef.tripgeniusapp.customview.EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>

    <com.jef.tripgeniusapp.customview.EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/user_name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editName"/>

    <com.jef.tripgeniusapp.customview.EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"/>

    <com.jef.tripgeniusapp.customview.EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"/>

    <com.jef.tripgeniusapp.customview.EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/phone"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"/>

    <com.jef.tripgeniusapp.customview.EditText
        android:id="@+id/editAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/age"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editPhone"/>

    <com.jef.tripgeniusapp.customview.EditText
        android:id="@+id/editGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/gender"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editAge"/>

    <com.jef.tripgeniusapp.customview.EditText
        android:id="@+id/editLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:hint="@string/location"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editGender"/>

    <com.jef.tripgeniusapp.customview.RegisterButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrasi"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/editLocation"/>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.095"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>